fix(backend): get bookmarkers by UserDto